--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apollo/server": "^4.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "convert-csv-to-json": "^2.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -21,7 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "mongoose-paginate-v2": "^1.7.1",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22"
   },
